[package]
name = "asm-cdf8"
version = "0.1.0"
edition = "2021"

[[bin]]
name="asm-cdf8"
path="asm-cdf8.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "1"
serde = { version = "1.0", features = ["derive"] }
strum = "0.25"
strum_macros = "0.25"
pretty-hex = "0.3"
srec = "0.2"
ihex = "3.0"
